--- a/src/assets/stylesheets/fiazm-admin.css
+++ b/src/assets/stylesheets/fiazm-admin.css
@@ -25,7 +25,7 @@
 	padding: 15px 0px;
 }
 
-#featuredgallerydiv .media-modal-icon {
+#featuredicondiv .media-modal-icon {
 	background-position: -95px 5px;
 }
 
@@ -41,17 +41,17 @@
 /* Special CSS to the Select and Remove Buttons */
 
 @media screen and (min-width: 783px) {
-	#featuredgallerydiv button {
+	#featuredicondiv button {
 		height: 32px !important;
 		padding-top:1px !important;
 	}
 }
 
-#featuredgallerydiv button {
+#featuredicondiv button {
 	margin-top:5px !important;
 }
 
-#featuredgallerydiv button#fg_removeall:before {
+#featuredicondiv button#fg_removeall:before {
 	content:"\f153";
 	font-family:"dashicons";
 	position:relative;
@@ -61,23 +61,23 @@
 
 /* CSS to the Preview List */
 
-#featuredgallerydiv ul {
+#featuredicondiv ul {
 	margin:0;
 }
 
-#featuredgallerydiv ul::after {
+#featuredicondiv ul::after {
 	display:block;
 	clear:both;
 	content:"";
 }
 
-#featuredgallerydiv ul li {
+#featuredicondiv ul li {
 	margin:0 10px 10px 0;
 	position:relative;
 	float:left;
 }
 
-#featuredgallerydiv ul li img {
+#featuredicondiv ul li img {
 	display:block;
 	height:150px;
 	width:150px;
@@ -88,7 +88,7 @@
 }
 
 
-#featuredgallerydiv ul li button {
+#featuredicondiv ul li button {
 	cursor:pointer;
 	display:none;
 	position:absolute;
@@ -109,10 +109,10 @@
 	box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.3);
 }
 
-#featuredgallerydiv ul li:hover button {
+#featuredicondiv ul li:hover button {
 	display:block;
 }
 
-#featuredgallerydiv ul li button:hover {
+#featuredicondiv ul li button:hover {
 	box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.6);
 }
